--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ color: chartreuse;
       text-align: center;
 
   }
-  b{
+  b1{
       border: 2px solid white;
       padding: 20px;
       margin: 20px ;
